--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,4 @@
 .RData
 .Ruserdata
 .DS_Store
-README_files/figure-gfm/pubsvtime-1.png
-README_files/figure-gfm/topjrnls-1.png
-README_files/figure-gfm/topjrnls2-1.png
-out/all_results.csv
+README_files
